--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,15 +3,29 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
-
-        link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css")   
+        // Bootstrap CSS
+        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css")
+        // DataTables CSS
+        link(rel="stylesheet", href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css") 
+        //  configuración de dataTable
+        script(src="https://code.jquery.com/jquery-3.6.0.min.js")  
+        // Bootstrap JS
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js") 
+        // DataTables JS
+        script(src="https://cdn.datatables.net/2.1.8/js/dataTables.js") 
+        // Estilo para las notificaciones
+        //link(rel='stylesheet', href='/css/notificaciones.css')  
+        // link para usar iconos de Font Awezone
+        link(href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet")
     body 
         div
             nav
                 ul 
+                    li 
+                        a(href="/alumno/crear") Alumno 
                     li
                         a(href="/materia/index") Materia 
                     
-                    
+    // Configuración del dataTable para las tablas
+    script(src='/js/dataTableConfig.js')            
     block content 
