--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,6 +25,8 @@ html(lang="en")
                         a(href="/alumno/index") Alumno 
                     li
                         a(href="/materia/index") Materia 
+                    li
+                        a(href="/usuario/index") Usuario 
     // Lógica para las notificaciones
     script(src='/js/notificaciones.js')               
     // Configuración del dataTable para las tablas
