--- a/views/nota/alta.pug
+++ b/views/nota/alta.pug
@@ -26,7 +26,7 @@ block content
                 
                 .mb-3 
                     label(for="rol") Calificacion:
-                    select(name="rol" class="form-control")
+                    select(name="calificacion" class="form-control")
                         option(value="1") 1
                         option(value="2") 2
                         option(value="3") 3
