--- a/views/nota/alta.pug
+++ b/views/nota/alta.pug
@@ -10,7 +10,7 @@ block content
         #notification.alert.alert-danger
             | #{errorMessage}
 
-    h1(class = "text-center")
+    h1(class = "text-center") Alta de nota
 
     .containter 
     .row.justify-content-center 
