--- a/views/alumno/materias.pug
+++ b/views/alumno/materias.pug
@@ -31,7 +31,7 @@ block content
                         td
                             div(class="btn-group")
                                 
-                                if a.estado == 1
+                                if alumno.estado == 1
                                     form(action=`/nota/crear/${alumno.idAlumno}/${a.idMateria}`, method= 'GET')
                                         button(type="submit" class="btn btn-info") Poner Nota
 
