--- a/views/nota/notas.pug
+++ b/views/nota/notas.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
     if !materias || materias.length === 0
-        h1(class="text-center text-danger") No cuenta con notas!
+        h1(class="text-center text-danger") No hay notas registradas!
     else
         div.container
             h2(class="text-center mt-4 mb-3 text-primary") Notas del Alumno/a #{alumno.nombre} #{alumno.apellido}
